--- a/bytebuzz-frontend/package.json
+++ b/bytebuzz-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
