--- a/bytebuzz-frontend/package.json
+++ b/bytebuzz-frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
